2012-06-18  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	AppChooserDialog: Fix property name in constructors.

	* gtk/src/appchooserdialog.ccg: Change incorrect property name "file" to
	the correct "gfile" in constructors.

2012-06-15  Murray Cumming  <murrayc@murrayc.com>

	Add an extra .defs entry needed for documentation.

	* gdk/src/gdk_extra_objects.defs: Add GdkOffscreenWindow.

2012-06-15  Murray Cumming  <murrayc@murrayc.com>

	Add some extra .defs entries needed for documentation.

	* gdk/src/gdk_extra_objects.defs:
	* gtk/src/gtk_extra_objects.defs: Add definitions needed by
	the documentation generator.

2012-06-14  Murray Cumming  <murrayc@murrayc.com>

	gen_scripts: Do not require a change to the PATH environment variable.

	* tools/gen_scripts/gdk_generate_docs.sh:
	* tools/gen_scripts/gdk_generate_enums.sh:
	* tools/gen_scripts/gdk_generate_methods.sh:
	* tools/gen_scripts/gtk_generate_docs.sh:
	* tools/gen_scripts/gtk_generate_enums.sh:
	* tools/gen_scripts/gtk_generate_methods.sh: Remove the need to change
	the PATH as I did in the glibmm gen_scripts.

2012-06-12  Murray Cumming  <murrayc@murrayc.com>

	Application: run(): Do not show the window until activation.

	* gtk/src/application.[hg|ccg]: run(window): Only show the window in 
	an activate signal handler, to fix a crash caused by the application not
	being registered when the GtkApplicationWindow tries to realize itself.

2012-05-28  Murray Cumming  <murrayc@murrayc.com>

	Container: Slight improvements to the vfunc documentation.

	* gtk/src/container.hg:

2012-05-28  Mark Vender <markv743@yahoo.co.uk>

 	Container: Document several rarely used virtual functions
    
	* gtk/src/container.hg: Add documentation for the following functions:
	child_type(), forall(), composite_child(), [get|set]_child_property(). The
	documentation comes from the C docs.
    
	Bug #670206.

2012-04-19  Murray Cumming  <murrayc@murrayc.com>

	Application: add_window(): Correct the documentation.
