@@ -1,3 +1,13 @@
+2012-07-16  Murray Cumming  <murrayc@murrayc.com>
+
+	Show get_type() in the API documentation.
+
+	* tools/m4/class_gtkobject.m4: Move the static get_type()
+	functions out of the ifdef so that doxygen can see them,
+	because they are sometimes needed, for instance when 
+	implementing a custom container.
+	Bug #670212 (Mark Vender).
+
 2012-06-18  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
 
 	AppChooserDialog: Fix property name in constructors.
